--- a/_includes/layouts/reading-list.njk
+++ b/_includes/layouts/reading-list.njk
@@ -5,9 +5,7 @@ section: reading-list
 <p>
     This is a list of the {{ readingList | length }}
     {% if readingList | length > 50 %}
-        <a href="https://github.com/edjw/edjw-blog/blob/a528443b33ce24de27097d6f1e9ac74ed817e851/_includes/layouts/reading-list.njk#L7-L11">
-            (🤦‍‍‍‍)
-        </a>
+        <a href="https://github.com/edjw/edjw-blog/blob/a528443b33ce24de27097d6f1e9ac74ed817e851/_includes/layouts/reading-list.njk#L7-L11" class="no_text_decoration">(🤦‍‍‍‍)</a>
     {% endif %}
     links that are currently saved in <a href="https://getpocket.com">my Pocket account</a> that I haven't tagged as 'private'. The Pocket article links only work if you've got a Pocket account.
 </p>
@@ -17,47 +15,47 @@ section: reading-list
         href="/2019/04/26/publishing-my-pocket-reading-list-on-this-website">a blogpost here</a>.
 </p>
 
-
 <hr>
 
-<ul class="list-unstyled mt-4">
+<ul class="reading_list">
 
     {% for item in readingList %}
 
-    <li class="mb-3">
-        <p class="mb-1">
+        <li>
             <a href="{{ item.resolved_url }}"
-                class="word-wrap-break-word">{{ item.resolved_title if item.resolved_title else item.resolved_url }}</a>{% if item.authors %}
-            by {% for authorID, authorDetails in item.authors %} <em>{{ authorDetails.name | title }} </em>
-            {% endfor %} {% endif %}
+                class="word-wrap-break-word">{{ item.resolved_title if item.resolved_title else item.resolved_url }}</a>
+            {% if item.authors %}
+            by {% for authorID, authorDetails in item.authors %}
+                    <em>{{ authorDetails.name | title }}
+                    </em>
+                {% endfor %}
+            {% endif %}
+        </li>
 
-        </p>
-
-        <small>
-            <a href="https://app.getpocket.com/read/{{ item.item_id }}" class="border-0">
-                <img src="/assets/internal_images/pocket.svg" alt="Pocket logo" class="img-fluid mr-2" width="20">
-            </a>
+        <small class="pocket_link">
             <a href="https://app.getpocket.com/read/{{ item.item_id }}">
                 Pocket article link
             </a>
         </small>
 
         {% if item.excerpt %}
-        <p class="mt-2 mb-1"><i>Summary: </i>{{ item.excerpt }}</p>
+            <p>
+                <i>Summary: </i>{{ item.excerpt }}</p>
         {% endif %}
 
         {% if item.tags %}
-        <small><i>Tags: </i>
-            {% for tag, tagHash in item.tags %}
-            <a href="https://getpocket.com/explore/{{ tag }}">{{ tag }}</a>{% if loop.revindex > 1 %},{% endif %}
-            {% endfor %}
-        </small>
+            <small>
+                <i>Tags: </i>
+                {% for tag, tagHash in item.tags %}
+                    <a href="https://getpocket.com/explore/{{ tag }}">{{ tag }}</a>
+                    {% if loop.revindex > 1 %},{% endif %}
+                {% endfor %}
+            </small>
         {% endif %}
 
-    </li>
-    {% if loop.revindex > 1 %}
-    <hr>
-    {% endif %}
+        {% if loop.revindex > 1 %}
+            <hr>
+        {% endif %}
 
     {% endfor %}
 
