--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,10 @@
-/* * {
-    border: 1px dotted blue;
-} */
+:root {
+  --color-primary: #2341c1;
+  --color-secondary-text: #ffffff;
+}
 
 html {
-  font-size: 16px;
+  font-size: 20px;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   min-width: 300px;
@@ -17,7 +18,88 @@ html {
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  font-size: 1.125rem;
+  margin: 0.5rem 0 1.5rem 0;
+  min-height: 100%;
+}
+
+.container {
+  max-width: 35rem;
+  margin: 0.5rem auto;
+  position: relative;
+  padding: 0 1rem 0.5rem 1rem;
+  border-radius: 0.25rem;
+  -webkit-box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
+  box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
+}
+
+.section {
+  padding: 1rem;
+  margin: 1rem 0 0 0;
+  border-radius: 0.25rem;
+  -webkit-box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
+  box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
+  border-top: 0.5rem solid var(--color-primary);
+}
+
+/* Sticky footer */
+html {
+  height: 100%;
+}
+body {
+  display: flex;
+  flex-direction: column;
+}
+main {
+  flex: 1 0 auto;
+}
+footer {
+  flex-shrink: 0;
+}
+/* End sticky footer */
+
+.e-content > * + *,
+footer > * + *,
+header > * + * main > * + *,
+main *,
+li,
+nav {
+  margin-top: 1rem;
+}
+
+nav {
+  display: flex;
+  flex-direction: column;
+}
+
+.nav_list {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+}
+
+#nav_toggler {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--color-primary);
+  color: var(--color-secondary-text);
+  border: none;
+  padding: 0.25rem 8rem;
+}
+
+.mobileShown {
+  display: flex;
+}
+
+@media (min-width: 650px) {
+  .nav_list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+
+  #nav_toggler {
+    display: none;
+  }
 }
 
 .word-wrap-break-word,
@@ -29,156 +111,59 @@ body {
   word-break: break-word;
 }
 
-a {
-  border-bottom: 2px solid #2341c1;
-  color: #212121;
-}
-
-a:hover,
-a:active,
-a:focus {
-  color: #2341c1;
-  text-decoration: none;
-}
-
-a.nav-link {
-  background-color: #2341c1;
-}
-
-a.nav-link:hover,
-a.nav-link:active,
-a.nav-link:focus {
-  color: #f8f9fa !important;
-}
-
-#navigation > nav > button {
-  background-color: #2341c1;
-  /*     outline: none; */
-  min-width: 98%;
-}
-
-.nav-item {
-  -moz-user-select: none;
-  -khtml-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-.title {
-  font-weight: 600;
-  line-height: 1.125;
-  font-size: 2rem;
-}
-
-.title > a {
-  border: none;
-  color: #2341c1;
-}
-
-.title > a:hover,
-.title > a:active,
-.title > a:focus {
-  /* border-bottom: 2px solid #2341C1; */
-  color: #2341c1;
-}
-
-.post-date {
-  font-size: 1.2rem;
-  font-weight: 500;
-}
-
-.post-title {
-  font-weight: 400;
-  font-size: 1.5rem;
-}
-
-.post-title > a {
-  border: none;
-  text-decoration: underline;
-  -webkit-text-decoration-color: #2341c1;
-  text-decoration-color: #2341c1;
-}
-
-pre.highlight {
-  border-top: 1px solid #2341c1;
-  border-bottom: 1px solid #2341c1;
+button {
+  cursor: pointer;
 }
 
 pre {
   padding: 1rem 0.5rem;
-  box-shadow: 0 4px 6px 0 hsla(0,0%, 0%, 0.2);
+  box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
+  overflow: auto;
 }
 
-.w-80 {
-  width: 80%;
+.hidden {
+  display: none;
 }
 
-/* Scroll Indicator */
-
-.header {
-  position: fixed;
-  top: 0;
-  z-index: 1;
-  width: 100%;
-  left: 0;
-  background-color: rgba(255, 255, 255, 1);
-}
-
-.progress-container {
-  width: 100%;
-  height: 5px;
-}
-
-.progress-bar {
-  height: 5px;
-  background: #2341c1;
-  width: 0%;
-}
-
-/* End of Scroll Indicator */
-
-/*!
- * Hover.css (http://ianlunn.github.io/Hover/)
- * Version: 2.3.2
- * Author: Ian Lunn @IanLunn
- * Author URL: http://ianlunn.co.uk/
- * Github: https://github.com/IanLunn/Hover
- * Hover.css Copyright Ian Lunn 2017. Generated with Sass.
- */
-
-/* Underline From Center */
-.hvr-underline-from-center {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  position: relative;
+.visually-hidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: auto;
+  margin: 0;
   overflow: hidden;
-}
-
-.hvr-underline-from-center:before {
-  content: "";
+  padding: 0;
   position: absolute;
-  left: 51%;
-  right: 51%;
-  bottom: 0;
-  background-color: #f8f9fa;
-  height: 4px;
-  -webkit-transition-property: left, right;
-  transition-property: left, right;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
+  width: 1px;
+  white-space: nowrap;
 }
 
-.hvr-underline-from-center:hover:before,
-.hvr-underline-from-center:focus:before,
-.hvr-underline-from-center:active:before {
-  left: 15px;
-  right: 15px;
+.no_text_decoration {
+  text-decoration: none;
 }
 
-/* End of Hover css */
+.no_list_style {
+  list-style-type: none;
+}
+
+.nav_item {
+  display: inline;
+}
+
+.site_title {
+  line-height: 1;
+  text-align: center;
+}
+
+.post_title {
+  line-height: 1.2;
+}
+
+.section > h2,
+.section > .post_date {
+  margin-top: 0;
+}
+
+a {
+  color: var(--color-primary);
+  text-decoration-color: var(--color-primary);
+}
