--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -83,7 +83,8 @@ nav {
   background-color: var(--color-primary);
   color: var(--color-secondary-text);
   border: none;
-  padding: 0.25rem 8rem;
+  padding: 0.25rem 0;
+  margin: 0 4rem;
 }
 
 .mobileShown {
@@ -102,6 +103,13 @@ nav {
   }
 }
 
+footer > nav {
+  margin-top: 0;
+}
+
+.footer_nav_item:first-child {
+  margin-top: 0;
+}
 .word-wrap-break-word,
 .footnote-item a {
   overflow-wrap: break-word;
