--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,28 +1,28 @@
 <footer class="section">
   <nav>
 
-    <ul class="nav_list">
+    <ul class="footer_nav_list">
 
       {% if site.author.twitterUsername %}
-        <li class="nav_item">
+        <li class="footer_nav_item">
           <a href="https://twitter.com/{{ site.author.twitterUsername }}" rel="me">Twitter</a>
         </li>
       {% endif %}
 
       {% if site.repository %}
-        <li class="nav_item">
+        <li class="footer_nav_item">
           <a href="https://github.com/{{ site.repository }}">Source</a>
         </li>
       {% endif %}
 
       {% if site.RSSFeed %}
-        <li class="nav_item">
+        <li class="footer_nav_item">
           <a href="/feed.xml">RSS</a>
         </li>
       {% endif %}
 
       {% if site.sitemap %}
-        <li class="nav_item">
+        <li class="footer_nav_item">
           <a href="/sitemap.xml">Sitemap</a>
         </li>
       {% endif %}
