--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -13,7 +13,7 @@ section: post
     </div>
     <!-- End of h-entry things -->
 
-    <h2 class="p-name">{{ title }}</h2>
+    <h2 class="p-name post_title">{{ title }}</h2>
 
     <p>{{ page.date | readableDate }}</p>
     <p class="reading-time">Reading time:<span>
