aria-expanded on menu button, fixing button text alignment on chrome/safari

--- a/_includes/components/nav.njk
+++ b/_includes/components/nav.njk
@@ -1,7 +1,7 @@
 {% if navigation.items %}
 
   <nav>
-    <button id="nav_toggler" type="button">Menu</button>
+    <button id="nav_toggler" type="button" aria-expanded="false">Menu</button>
 
     <ul class="nav_list">
       {% for nav in navigation.items %}
