little redesign cleanups

--- a/_includes/layouts/reading-list.njk
+++ b/_includes/layouts/reading-list.njk
@@ -5,7 +5,7 @@ section: reading-list
 <p>
     This is a list of the {{ readingList | length }}
     {% if readingList | length > 50 %}
-        <a href="https://github.com/edjw/edjw-blog/blob/a528443b33ce24de27097d6f1e9ac74ed817e851/_includes/layouts/reading-list.njk#L7-L11" class="no_text_decoration">(🤦‍‍‍‍)</a>
+        <a href="https://github.com/edjw/edjw-blog/blob/a528443b33ce24de27097d6f1e9ac74ed817e851/_includes/layouts/reading-list.njk#L7-L11" class="no_text_decoration">(🤦‍♂️‍‍‍‍)</a>
     {% endif %}
     links that are currently saved in <a href="https://getpocket.com">my Pocket account</a> that I haven't tagged as 'private'. The Pocket article links only work if you've got a Pocket account.
 </p>
