--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -14,11 +14,14 @@ section: post
     <!-- End of h-entry things -->
 
     <h2 class="p-name post_title">{{ title }}</h2>
-
-    <p>{{ page.date | readableDate }}</p>
-    <p class="reading-time">Reading time:<span>
-            {{ content | readingTime }}</span></p>
-
+    <hr>
+    <p class="published_date">
+        <em>Published:</em>
+        {{ page.date | readableDate }}</p>
+    <p class="reading_time">
+        <em>Reading time:</em>
+        {{ content | readingTime }}</p>
+    <hr>
     <div class="e-content">
         {{ content | safe }}
     </div>
