--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -19,12 +19,14 @@
 
 		{% include "components/footer.njk" %}
 
-		<script src="/assets/js/main.js"></script>
-		<script src="/assets/js/matomo.js" defer></script>
-		{# {% if site.netlifyCMS == true %}
-			<script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-		{% endif %} #}
+		{% set js %}
+		{% include "../../assets/js/main.js" %}
+		{% include "../../assets/js/matomo.js" %}
+		{% endset %}
 
+		<script>
+			{{ js | jsmin | safe }}
+		</script>
 	</body>
 
 </html>
