--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -199,6 +199,7 @@ button {
 }
 
 pre {
+  white-space: pre-wrap;
   padding: 1rem 0.5rem;
   -webkit-box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
   box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
