--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -21,7 +21,7 @@
 
 		{% set js %}
 		{% include "../../assets/js/main.js" %}
-		{% include "../../assets/js/matomo.js" %}
+		{# {% include "../../assets/js/matomo.js" %} #}
 		{% endset %}
 
 		<script>
