--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
 :root {
   --color-primary: #2341c1;
+  --color-primary-text: #212121;
   --color-secondary-text: #ffffff;
 }
 
@@ -29,6 +30,7 @@ body {
     Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   margin: 0.5rem 0 1.5rem 0;
   min-height: 100%;
+  color: var(--color-primary-text);
 }
 
 .container {
