--- a/_includes/components/nav.njk
+++ b/_includes/components/nav.njk
@@ -1,7 +1,7 @@
 {% if navigation.items %}
 
-  <nav>
-    <button id="nav_toggler" type="button" aria-expanded="false">Menu</button>
+  <nav aria-label="main navigation">
+    <button id="nav_toggler" type="button" aria-expanded="false" aria-label="open navigation">Menu</button>
 
     <ul class="nav_list">
       {% for nav in navigation.items %}
