fix accessbility issues on reading list

--- a/_includes/components/nav.njk
+++ b/_includes/components/nav.njk
@@ -1,6 +1,6 @@
 {% if navigation.items %}
 
-  <nav aria-label="main navigation">
+  <nav aria-label="primary">
     <button id="nav_toggler" type="button" aria-expanded="false" aria-label="open navigation">Menu</button>
 
     <ul class="nav_list">
