--- a/_includes/layouts/reading-list.njk
+++ b/_includes/layouts/reading-list.njk
@@ -17,42 +17,39 @@ section: reading-list
 
 <hr>
 
-<ul class="reading_list">
+<div class="reading_list">
 
     {% for item in readingList %}
 
-        <li>
-            <a href="{{ item.resolved_url }}"
+        <a href="{{ item.resolved_url }}"
                 class="word-wrap-break-word">{{ item.resolved_title if item.resolved_title else item.resolved_url }}</a>
-            {% if item.authors %}
+        {% if item.authors %}
             by {% for authorID, authorDetails in item.authors %}
-                    <em>{{ authorDetails.name | title }}
-                    </em>
-                {% endfor %}
-            {% endif %}
+                <em>{{ authorDetails.name | title }}
+                </em>
+            {% endfor %}
+        {% endif %}
 
-            <small class="pocket_link">
-                <a href="https://app.getpocket.com/read/{{ item.item_id }}">
+        <small class="pocket_link">
+            <a href="https://app.getpocket.com/read/{{ item.item_id }}" aria-label="Read {% if item.resolved_title %} {{ item.resolved_title }} {% else %}Link{% endif% } {% if item.authors %} by {% for authorID, authorDetails in item.authors %} {{ authorDetails.name | title }}{% endfor %}{% endif %} on Pocket">
                 Pocket article link
             </a>
+        </small>
+
+        {% if item.excerpt %}
+            <p class="word-wrap-break-word">
+                <em>Summary: </em>{{ item.excerpt }}</p>
+        {% endif %}
+
+        {% if item.tags %}
+            <small>
+                <i>Tags: </i>
+                {% for tag, tagHash in item.tags %}
+                    <a href="https://getpocket.com/explore/{{ tag }}">{{ tag }}</a>
+                    {% if loop.revindex > 1 %},{% endif %}
+                {% endfor %}
             </small>
-
-            {% if item.excerpt %}
-                <p class="word-wrap-break-word">
-                    <em>Summary: </em>{{ item.excerpt }}</p>
-            {% endif %}
-
-            {% if item.tags %}
-                <small>
-                    <i>Tags: </i>
-                    {% for tag, tagHash in item.tags %}
-                        <a href="https://getpocket.com/explore/{{ tag }}">{{ tag }}</a>
-                        {% if loop.revindex > 1 %},{% endif %}
-                    {% endfor %}
-                </small>
-            {% endif %}
-
-        </li>
+        {% endif %}
 
         {% if loop.revindex > 1 %}
             <hr>
@@ -60,4 +57,4 @@ section: reading-list
 
     {% endfor %}
 
-</ul>
+</div>
