add feedbin starred and raindrop links pages

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -258,7 +258,8 @@ pre {
 }
 
 .section > .post_title,
-.section > .post_date {
+.section > .post_date,
+.section > .page_title {
   margin-top: 0;
 }
 
