--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -3,6 +3,6 @@ layout: layouts/base.njk
 section: page
 ---
 <article class="section">
-    <h2>{{ title }}</h2>
+    <h2 class="page_title">{{ title }}</h2>
     {{ content | safe }}
 </article>
