fix problem in raindrop template

--- a/_includes/layouts/raindrop-links.njk
+++ b/_includes/layouts/raindrop-links.njk
@@ -14,7 +14,7 @@ section: rss-likes
         <a href="{{ item.url }}" class="word-wrap-break-word">
             {{ item.title }}
         </a>
-        <p>{{ item.excerpt }}
+        <p>{{ item.excerpt }}</p>
 
 {% if loop.revindex > 1 %}
     <hr>
