--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -288,3 +288,11 @@ a {
   display: block;
   margin-top: 0.5rem;
 }
+
+.toc > ul {
+  padding-left: 0;
+}
+
+.toc > ul > li {
+  list-style-type: none;
+}
