--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -51,7 +51,7 @@ body {
 }
 
 .section {
-  padding: 1rem;
+  padding: 0.75rem 1rem 1rem 1rem;
   margin: 1rem 0 0 0;
   border-radius: 0.25rem;
   -webkit-box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
