--- a/_includes/components/nav.njk
+++ b/_includes/components/nav.njk
@@ -1,18 +1,18 @@
 {% if navigation.items %}
 
-  <nav aria-label="primary" x-data="{ open: false }">
-    <button id="nav_toggler" type="button" aria-expanded="false" aria-label="open navigation"  @click="open = true">Menu</button>
+<nav aria-label="primary" x-data="{ navOpen: false }">
+  <button id="nav_toggler" type="button" aria-expanded="false" aria-label="open navigation" @click="navOpen = true" :aria-expanded='navOpen ? true : false' x-text='navOpen ? "Hide menu" : "Menu"'>Menu</button>
 
-    <ul class="nav_list" x-show="open" @click.away="open = false">
-      {% for nav in navigation.items %}
-        <li class="nav_item">
-          <a href="{{ nav.url | url }}">
-            {{ nav.text }}
-          </a>
-        </li>
-      {% endfor %}
+  <ul class="nav_list" x-show="navOpen" @click.away="navOpen = false">
+    {% for nav in navigation.items %}
+    <li class="nav_item">
+      <a href="{{ nav.url | url }}">
+        {{ nav.text }}
+      </a>
+    </li>
+    {% endfor %}
 
-    </ul>
-  </nav>
+  </ul>
+</nav>
 
-  {% endif%}
+{% endif%}
