post list dates; inlining alpine

--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -3,11 +3,11 @@
 
     <ul class="footer_nav_list">
 
-      {% if site.author.twitterUsername %}
+      {# {% if site.author.twitterUsername %}
         <li class="footer_nav_item">
           <a href="https://twitter.com/{{ site.author.twitterUsername }}" rel="me">Twitter</a>
         </li>
-      {% endif %}
+      {% endif %} #}
 
       {% if site.repository %}
         <li class="footer_nav_item">
