--- a/_includes/components/postslist.njk
+++ b/_includes/components/postslist.njk
@@ -1,12 +1,14 @@
+{% set year = "" %}
 {% for post in postslist | reverse %}
-	<section class="section">
+	{% set postYear = post.date | getYear %}
+	{% if year != postYear %}
+		<p class="new_year">{{ postYear }}</p>
+		{% set year = postYear %}
+	{% endif %}
+	<section class="section zoom">
 		<p class="post_date">{{ post.date | readableDate }}</p>
 		<h3 class="post_title">
 			<a href="{{ post.url | url }}" title="{{ post.data.title }}">{{ post.data.title }}</a>
-	</h3>
+		</h3>
 	</section>
-	{# {% if loop.revindex > 1 %}
-		<hr>
-	{% endif %} #}
-
 {% endfor %}
