--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -63,5 +63,5 @@
   <style>
     {{css | cssmin | safe}}
   </style>
-  <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+  {# <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script> #}
 </head>
