--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -276,8 +276,9 @@ pre {
   text-align: center;
 }
 
-.post_title, .page_title {
-  line-height: 1.2; 
+.post_title,
+.page_title {
+  line-height: 1.2;
   font-size: 1.25rem;
   color: var(--color-primary);
 }
@@ -322,6 +323,19 @@ a {
 
 .reading_time {
   margin-top: 0.25rem;
+}
+
+.reading_list {
+  border-top: 1px solid var(--color-primary-text);
+}
+
+.reading_list_item:nth-of-type(n + 2) {
+  border-top: 1px solid var(--color-primary-text);
+  padding-top: 1rem;
+}
+
+.reading_item_title {
+  font-weight: bold;
 }
 
 .pocket_link {
