--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -318,11 +318,23 @@ a {
 .date_reading {
   border-top: 1px solid var(--color-primary-text);
   border-bottom: 1px solid var(--color-primary-text);
-  padding-bottom: 1rem;
+  padding-bottom: 0.5rem;
+  color: var(--color-grey);
 }
 
-.reading_time {
-  margin-top: 0.25rem;
+.date_reading p {
+  font-size: 0.8rem;
+}
+
+.published_date {
+  margin-top: 0.5rem;
+}
+
+.date_reading span {
+  background-color: var(--color-primary);
+  color: var(--color-secondary-text);
+  border-radius: 5px;
+  padding: 0.0625rem 0.5rem;
 }
 
 .reading_list {
