little design fix

--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -3,7 +3,7 @@ layout: layouts/base.njk
 section: post
 ---
 
-<article class="h-entry">
+<article class="h-entry section">
 
     <!-- h-entry things -->
     <div class="hidden">
