move alpine to defer

--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -64,4 +64,7 @@
     {{css | cssmin | safe}}
   </style>
   {# <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script> #}
+  %}
+
+		<script src=“/assets/js/alpine.js” defer></script>
 </head>
