--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -17,9 +17,7 @@
 			{{ content | safe }}
 		</main>
 
-		{% include "components/footer.njk" %}
-
-		<script src="/assets/js/alpine.js"></script>
+		{% include "components/footer.njk" 
 
 		{% set js %}
 		{# {% include "../../assets/js/alpine.js" %} #}
