--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -17,10 +17,9 @@
 			{{ content | safe }}
 		</main>
 
-		{% include "components/footer.njk" 
+		{% include "components/footer.njk" %}
 
 		{% set js %}
-		{# {% include "../../assets/js/alpine.js" %} #}
 		{% include "../../assets/js/main.js" %}
 		{% endset %}
 		<script>
